@@ -1,0 +1,2 @@
+<form action="{{ remote.url_auth_start }}" method="post">{% csrf_token %}
+    <button class="btn btn-block btn-primary mb-1" type="submit" value="">{{ remote.title }}</button></form>
