@@ -1,0 +1,1 @@
+<form action="{{ remote.url_auth_start }}" method="post">{% csrf_token %}<button class="{{ remote_btn_cls }}" type="submit" value="">{{ remote.title }}</button></form>
