@@ -2,6 +2,11 @@ django-sitegate changelog
 =========================
 
 
+Unreleased
+----------
+* Remote auth form now use POST.
+
+
 v1.3.0 [2021-10-10]
 -------------------
 + Added experimental support for sign in using remote services, e.g. Yandex, Google.
